tests/integration/targets/playbooks/provision_playbook/example.com/platform/kong/prod-kong/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prod-kong
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    kubernetes.io/ingress.class: prod
    cert-manager.io/cluster-issuer: tavros
    konghq.com/https-redirect-status-code: '302'
spec:
  tls:
  - hosts:
    - "apps.tavros.example.com"
    secretName: prod-kong-ingress-certs
  rules:
  - host: "apps.tavros.example.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-prod-kong-kong-proxy
          servicePort: 80
